--- a/src/bilbioteca2/aplicacion/VentanaUsuario.form
+++ b/src/bilbioteca2/aplicacion/VentanaUsuario.form
@@ -295,6 +295,9 @@
               <Image iconType="3" name="/bilbioteca2/aplicacion/search.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jL_BuscarMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JSeparator" name="jSeparator1">
         </Component>
