--- a/src/bilbioteca2/aplicacion/PaginaPrincipal.form
+++ b/src/bilbioteca2/aplicacion/PaginaPrincipal.form
@@ -91,7 +91,7 @@
         <Container class="javax.swing.JPanel" name="jPanel2">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="d1" green="b4" id="InternalFrame.activeTitleBackground" palette="3" red="99" type="palette"/>
+              <Color blue="e5" green="cf" id="activeCaption" palette="3" red="b8" type="palette"/>
             </Property>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
